# django-autodisco

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: tests.yml
autodisco/: apps.py
sample_app/: manage.py
sample_app/app_one/: admin.py  apps.py  models.py  receivers.py
sample_app/app_one/migrations/: 0001_initial.py
sample_app/app_two/: admin.py  apps.py  models.py  receivers.py
sample_app/app_two/migrations/: 0001_initial.py
sample_app/sample_app/: settings.py  urls.py  wsgi.py
tests/: manage.py  settings.py  test_apps.py  urls.py
tests/app_one/: apps.py
tests/app_two/: apps.py  receivers.py
